2002-06-04  Mo DeJong  <supermo@bayarea.net>

	* patches/itk_pathname.patch: Remove patch
	since it has been integrated into the CVS
	at sources.redhat.com.

2002-06-01  Mo DeJong  <supermo@bayarea.net>

	* patches/tcl_configure.patch: Add patch for
	tcl/win/configure so that mkdist.sh will
	generate a dist file that compiles under Windows.

2002-05-31  Mo DeJong  <supermo@bayarea.net>

	* mkdist.sh: Automatically apply patches
	from src/snavigator/patches to clean CVS
	checkout before making dist file.
	* patches/README.TXT:
	* patches/itk_component.patch:
	* patches/itk_pathname.patch:
	* patches/tcl_configure.patch:
	* patches/tk_select.patch: Add patch
	files that need to be applied to sources CVS.

2002-05-31  John Lash  <jlash@speakeasy.net>

	* gui/retrieverpane.tcl (handle_all_none): Fix broken
	checkbutton variable setting in the filter dialog.
	Deselect the files checkbutton when the None button
	is pressed.

2002-05-29  Mo DeJong  <supermo@bayarea.net>

	* gui/projedit.tcl (add_files_cb): Rewrite the add_files_cb
	method to avoid invoking [lsearch -nocase $files $file].
	This lsearch option was a local hack that is not in Tcl 8.3.
	To speed things up and support no case searching, we create
	a map that is checked as we loop over added files. Pass
	a list of file names to add_files_cb instead of wasting
	time in a useless eval.

2002-05-29  Mo DeJong  <supermo@bayarea.net>

	* gui/dialog.tcl (tk_dialog_with_widgets): Don't set .
	as the transient for the dialog. This keeps the dialog
	from being mapped when . is withdrawn under Win32/Tk 8.3.

2002-05-29  Mo DeJong  <supermo@bayarea.net>

	* gui/classtreepane.tcl (print): Rename PrintDialog,
	use itk_component(hull) not this, reorder arguments.
	Invoke Window::transient to explicitly set the
	transientfor property for the PrintDialog.
	* gui/dialog.tcl: Remove the poorly named -parent
	option for the Dialog class. A transient window
	should set its master using Window::transient.